Removed animation from infoBubble to avoid flickering.  Changed auto-close control to instead toggle between hover on/off and click on/off behavior for bubbles.

--- a/eventmapper.css
+++ b/eventmapper.css
@@ -22,3 +22,7 @@ html, body {
     /* line-height: 25px; */
     padding: 4px 4px 4px 8px;
 }
+
+.js-info-bubble-close {
+    visibility: hidden;
+}
